# MeshBeamFEA

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  config.json  example_config.json  tetrahedron.ply
Models/: TwoLineSegments.ply  lineSegments1.ply
ext/libigl/: CMakeLists.txt
ext/nlohmann/: json.hpp
ext/threed-beam-fea/src/: threed_beam_fea.cpp
ext/vcglib/vcg/complex/: allocate.h
src/: beam.hpp  beamsimulator.cpp  beamsimulator.hpp  beamsimulatortester.cpp  beamsimulatortester.cpp.autosave  beamsimulatortester.hpp  beamsimulatortester.hpp.autosave  colorbar.cpp  colorbar.hpp  drawer.cpp  drawer.hpp  edgemesh.cpp  edgemesh.hpp  gui.cpp  gui.hpp  main.cpp  mesh.hpp  meshstructs.hpp  utilities.hpp  viewer.cpp  viewer.hpp
